Fixed visibility bug for the side bar

--- a/style.css
+++ b/style.css
@@ -185,6 +185,7 @@ body {
 	padding-right: 10px;
 	padding-left: 10px;
 	opacity: 0;
+	visibility: hidden;
   	animation-fill-mode: forwards;
 	display: flex;
 	flex-direction: column;
